fixed word wrap issue in maylike banner

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,21 +110,26 @@ a {
   transform: scale(1, 1);
   transition: transform 0.5s ease;
   color: #324d67;
+  word-break: break-all;
 }
 .product-card:hover{
   transform: scale(1.1,1.1)
 }
 .product-image{
   border-radius: 15px;
- background-color: #ebebeb;
+  background-color: #ebebeb;
   transform: scale(1, 1);
   transition: transform 0.5s ease;
 }
-.product-name{
+#product-name{
   font-weight: 500;
   max-width: 240px;
   text-align: center;
+  word-break: break-word;
+  white-space: normal;
+  height: 40px;  
 }
+
 .product-price{
   font-weight: 800;
   margin-top: 6px;
@@ -565,6 +570,7 @@ padding: 6px;
   justify-content: center;
   gap: 15px;
   margin-top: 20px;
+  word-break: break-all;
 }
 .max-qty{
   font-weight: 500;
